# omarchy-hue

./: .gitignore  README.md  Taskfile.yml  omarchy-hue-setup.py  omarchy-hue-sync.py  pyproject.toml
lib/: colors.sh  config.sh  hue-api.sh  patch-theme.sh
omarchy_hue/: __init__.py  bridge.py  colors.py  config.py  init_cli.py  utils.py
tests/: test_patch.sh
