[project]
name = "omarchy-hue"
version = "1.0.0"
description = "Sync Omarchy theme colors with Philips Hue lights"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["omarchy_hue"]